[package]
name = "snake-piston"
version = "0.0.1"
authors = ["Alexandru Cojocaru <xojoc@gmx.com>"]

[[bin]]
name = "snake"
path = "snake.rs"

[dependencies]
piston = "0.51.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
piston_window = "0.111.0"
rand = "0.7.3"
